--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section id="projects">
-            <h2>Coding Projects</h2>
+            <h2>Programming/Data Science Projects</h2>
             <div class="project-card">
                 <h3><a href="https://github.com/novoaj/GreenSpaceExplorer">Green Space Explorer</a></h3>
                 <p>Developing a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</p>
@@ -52,9 +52,15 @@
                 <p>An article from the UW-Madison's Undergraduate Journal of Economics, Volume 13, about the Russia-Ukraine conflict and its Economic Consequences. (Pages 45-48, 24-25 on online version)</p>
             </div>
         </section>
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/your-profile">your-profile</a></p>
+            <p>GitHub: <a href="https://github.com/your-github">your-github</a></p>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+        <!-- No content in footer -->
     </footer>
 </body>
 </html>
