--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </section>
         <section id="contact">
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/your-profile">your-profile</a></p>
-            <p>GitHub: <a href="https://github.com/your-github">your-github</a></p>
+            <p>Email: <a href="mailto:benbcoleman08@gmail.com">benbcoleman08@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/benjamin-coleman02/">benjamin-coleman02</a></p>
+            <p>GitHub: <a href="https://github.com/bencoleman24">bencoleman24</a></p>
         </section>
     </main>
     <footer>
