--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -54,9 +55,11 @@
         </section>
         <section id="contact">
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:benbcoleman08@gmail.com">benbcoleman08@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/benjamin-coleman02/">benjamin-coleman02</a></p>
-            <p>GitHub: <a href="https://github.com/bencoleman24">bencoleman24</a></p>
+            <ul class="contact-list">
+                <li><i class="fas fa-envelope"></i> <a href="mailto:benbcoleman08@gmail.com">benbcoleman08@gmail.com</a></li>
+                <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/benjamin-coleman02">benjamin-coleman02</a></li>
+                <li><i class="fab fa-github"></i> <a href="https://github.com/bencoleman24">bencoleman24</a></li>
+            </ul>
         </section>
     </main>
     <footer>
