--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <p><strong>Technologies:</strong> Python, Statistical Modeling (Regression, Classification, Hyperparameter Tuning, Model Evaluation)</p>
             </div>
             <div class="project-card">
-                <h3><a href="https://github.com/bencoleman24/Big-Data-Systems-Projects">Intro to Big Data Systems</a></h3>
-                <p>Projects from Intro to Big Data Systems course (Spring 2023).</p>
+                <h3><a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems">Introduction to Big Data Systems Projects</a></h3>
+                <p>7 Projects from Intro to Big Data Systems course (Spring 2023).</p>
                 <p><strong>Technologies:</strong> Python, Docker, Hadoop, Spark, Kafka, Cassandra</p>
             </div>
             <div class="project-card">
