--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Hello! I'm an undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics, graduating in Spring of 2024. Take a look at some projects I've been working on!</p>
+        <h1>Benjamin Coleman Portfolio</h1>
+        <p>Hello! I'm an masters student at Boston University and a recent Data Science/Economics graduate from the University of Wisconsin-Madison. Take a look at some projects I've been working on!</p>
     </header>
     <main>
         <section id="projects">
