--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <section id="projects">
             <h2>Programming/Data Science Projects</h2>
             <div class="project-card">
-                <h3><a href="https://github.com/novoaj/GreenSpaceExplorer">Green Space Explorer</a></h3>
-                <p>Developing a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</p>
+                <h3><a href="https://github.com/novoaj/GreenSpaceExplorer">Green Space Explorer (Backend/ML)</a></h3>
+                <p>With a classmate, developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map. I worked primarily on the websites backend and 2 ML features. </p>
                 <p><strong>Technologies:</strong> Python, React, HTML, CSS, Javascript, Google Maps API</p>
             </div>
             <div class="project-card">
