--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 100%;
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background: #f7f9fc;
+            background: #f4f4f9;
             color: #333;
         }
 
@@ -23,32 +23,33 @@
         }
 
         header {
-            text-align: center;
-            padding: 20px;
-            background: #333;
+            background: #2c3e50;
             color: white;
+            padding: 20px;
+            text-align: center;
         }
 
         header h1 {
             margin: 0;
             font-family: 'Roboto Slab', serif;
-            font-size: 2.5em;
+            font-size: 2.8em;
+            font-weight: 700;
         }
 
         header p {
-            font-size: 1.2em;
+            font-size: 1.3em;
         }
 
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 10px 0;
+            margin: 15px 0;
             display: flex;
             justify-content: center;
         }
 
         nav ul li {
-            margin: 0 15px;
+            margin: 0 20px;
         }
 
         nav ul li a {
@@ -59,80 +60,108 @@
         }
 
         nav ul li a:hover {
-            color: #aaa;
+            color: #18bc9c;
         }
 
         section {
-            padding: 40px 20px;
-            max-width: 1000px;
+            padding: 60px 20px;
+            max-width: 1100px;
             margin: 0 auto;
         }
 
         h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-            color: #333;
+            color: #2c3e50;
             font-family: 'Roboto Slab', serif;
+            border-bottom: 3px solid #18bc9c;
+            padding-bottom: 10px;
+            margin-bottom: 40px;
+            font-size: 2.2em;
+        }
+
+        #about p {
+            font-size: 1.1em;
+            line-height: 1.8;
+            color: #555;
+        }
+
+        #about ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        #about ul li {
+            margin: 10px 0;
+            font-size: 1.1em;
         }
 
         .project-card {
             background: white;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
 
         .project-card h3 {
             margin-top: 0;
-            font-size: 1.5em;
+            font-size: 1.7em;
+            color: #2c3e50;
         }
 
         .project-card p {
-            margin: 10px 0;
+            margin: 15px 0;
+            color: #555;
         }
 
         .project-card a {
-            color: #333;
+            color: #18bc9c;
             text-decoration: none;
             transition: color 0.3s;
         }
 
         .project-card a:hover {
-            color: #555;
+            color: #1abc9c;
         }
 
-        .contact-list {
+        #contact ul {
             list-style: none;
             padding: 0;
+            display: flex;
+            justify-content: center;
         }
 
-        .contact-list li {
-            margin-bottom: 10px;
-            font-size: 1.2em;
+        #contact ul li {
+            margin: 0 15px;
+            font-size: 1.4em;
         }
 
-        .contact-list i {
+        #contact i {
             margin-right: 10px;
-            color: #333;
+            color: #2c3e50;
         }
 
-        .contact-list a {
-            color: #333;
+        #contact a {
+            color: #2c3e50;
             text-decoration: none;
             transition: color 0.3s;
         }
 
-        .contact-list a:hover {
-            color: #555;
+        #contact a:hover {
+            color: #18bc9c;
         }
 
         footer {
-            background: #333;
+            background: #2c3e50;
             color: white;
             text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
+            padding: 20px 0;
+            margin-top: 40px;
         }
     </style>
 </head>
