--- a/index.html
+++ b/index.html
@@ -78,20 +78,18 @@
             font-size: 2.2em;
         }
 
-        #about p {
-            font-size: 1.1em;
-            line-height: 1.8;
+        .experience {
+            margin-bottom: 40px;
+        }
+
+        .experience h3 {
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+
+        .experience p {
+            margin-bottom: 15px;
             color: #555;
-        }
-
-        #about ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        #about ul li {
-            margin: 10px 0;
-            font-size: 1.1em;
         }
 
         .project-card {
@@ -172,9 +170,37 @@
         <p>Data Science Master's Student at Boston University</p>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+
+</html>
+
+<!-- about.html -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - Benjamin Coleman</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+
+<body>
+    <header>
+        <h1>Benjamin Coleman</h1>
+        <p>Data Science Master's Student at Boston University</p>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -182,12 +208,57 @@
     <section id="about">
         <h2>About Me</h2>
         <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
-        <h3>Skills</h3>
-        <ul>
-            <li>Programming: Python, R, SQL, Spark, Docker</li>
-            <li>Key Skills: Data Analysis, Machine Learning, Statistics, Communication, Presentation</li>
-        </ul>
+        
+        <h2>Experience</h2>
+        <div class="experience">
+            <h3>Graduate Research Assistant - Boston University</h3>
+            <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
+        </div>
+        <div class="experience">
+            <h3>Data Science Intern - SuperWorld</h3>
+            <p><strong>June 2024 - September 2024</strong><br>Worked on various data analysis projects to identify key trends and potential strategies in improving platform engagement and growth. Enhanced data workflow by improving data cleanliness and optimizing transformation processes to support scalable models and analytics.</p>
+        </div>
+        <div class="experience">
+            <h3>Data Engineering Intern - CNH Industrial</h3>
+            <p><strong>May 2023 - August 2023</strong><br>Designed and implemented a data quality monitoring system using scheduled Databricks notebooks, enhancing data quality and accuracy. Employed statistical techniques to examine extensive vehicle data, successfully identifying and diagnosing problems, contributing to improved insights. Leveraged PowerBI for visualization and presented findings effectively.</p>
+        </div>
+        <div class="experience">
+            <h3>Student Assistant - University of Wisconsin-Madison, Dean of Students Office</h3>
+            <p><strong>January 2022 - May 2024</strong><br>Served as the first line of communication for the office, helping students, parents, and staff of the university. Assisted professional staff with projects and scheduling, and provided resources to students and parents in times of crisis.</p>
+        </div>
     </section>
+
+    <footer>
+        <p>&copy; 2024 Benjamin Coleman</p>
+    </footer>
+</body>
+
+</html>
+
+<!-- projects.html -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - Benjamin Coleman</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+
+<body>
+    <header>
+        <h1>Benjamin Coleman</h1>
+        <p>Data Science Master's Student at Boston University</p>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <section id="projects">
         <h2>Projects</h2>
@@ -198,6 +269,38 @@
         </div>
         <!-- Additional project cards here -->
     </section>
+
+    <footer>
+        <p>&copy; 2024 Benjamin Coleman</p>
+    </footer>
+</body>
+
+</html>
+
+<!-- contact.html -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Benjamin Coleman</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+
+<body>
+    <header>
+        <h1>Benjamin Coleman</h1>
+        <p>Data Science Master's Student at Boston University</p>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <section id="contact">
         <h2>Contact</h2>
