--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     <title>About - Benjamin Coleman</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .active {
+            color: #18bc9c;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,7 +22,7 @@
         <p>Data Science Master's Student at Boston University</p>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
