--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,12 @@
     <title>Projects - Benjamin Coleman</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .active {
+            color: #18bc9c;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
