--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
 </head>
 
 <body>
-    <header>
-        <h1>Benjamin Coleman</h1>
-        <p>Data Science Master's Student at Boston University</p>
+    <header class="detailed-header">
+        <div class="header-content">
+            <h1>Benjamin Coleman</h1>
+            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p class="location">Chicago | Boston</p>
+            <div class="contact-links">
+                <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://github.com/bencoleman24"><i class="fab fa-github"></i> GitHub</a>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="about.html" class="active">About</a></li>
