--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .active {
-            color: #18bc9c;
+            color: #007bff;
             font-weight: bold;
         }
     </style>
@@ -19,13 +19,13 @@
 <body>
     <header class="detailed-header">
         <div class="header-content">
-            <h1>Benjamin Coleman</h1>
-            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
-            <p class="location">Chicago | Boston</p>
+            <h1 style="color: #000;">Benjamin Coleman</h1>
+            <p style="color: #555;">Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p class="location" style="color: #007bff;">Chicago | Boston</p>
             <div class="contact-links">
-                <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-                <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/bencoleman24"><i class="fab fa-github"></i> GitHub</a>
+                <a href="mailto:benbcoleman08@gmail.com" style="color: #000;"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.linkedin.com/in/benjamin-coleman02" style="color: #000;"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://github.com/bencoleman24" style="color: #000;"><i class="fab fa-github"></i> GitHub</a>
             </div>
         </div>
         <nav>
@@ -38,26 +38,26 @@
     </header>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2 style="color: #000;">Projects</h2>
         <div class="project-card">
-            <h3><a href="https://github.com/novoaj/GreenSpaceExplorer">Green Space Explorer (Backend/ML)</a></h3>
-            <p>With a classmate, developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map. I worked primarily on the website's backend and machine learning features.</p>
-            <p><strong>Technologies:</strong> Python, React, HTML, CSS, Javascript, Google Maps API</p>
+            <h3 style="color: #000;"><a href="https://github.com/novoaj/GreenSpaceExplorer" style="color: #007bff;">Green Space Explorer (Backend/ML)</a></h3>
+            <p style="color: #555;">With a classmate, developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map. I worked primarily on the website's backend and machine learning features.</p>
+            <p style="color: #000;"><strong>Technologies:</strong> Python, React, HTML, CSS, Javascript, Google Maps API</p>
         </div>
         <div class="project-card">
-            <h3><a href="https://github.com/bencoleman24/Music-Recommendation-Website/tree/main">Music Recommendation Website</a></h3>
-            <p>A music recommendation website that allows users to select a recommendation model, receive song suggestions based on their choice, and provide feedback on the recommendations.</p>
-            <p><strong>Technologies:</strong> Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotify API), HTML, CSS, JavaScript</p>
+            <h3 style="color: #000;"><a href="https://github.com/bencoleman24/Music-Recommendation-Website/tree/main" style="color: #007bff;">Music Recommendation Website</a></h3>
+            <p style="color: #555;">A music recommendation website that allows users to select a recommendation model, receive song suggestions based on their choice, and provide feedback on the recommendations.</p>
+            <p style="color: #000;"><strong>Technologies:</strong> Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotify API), HTML, CSS, JavaScript</p>
         </div>
         <div class="project-card">
-            <h3><a href="https://github.com/bencoleman24/AmazonReviewInsights">Amazon Product Sentiment Report Generator</a></h3>
-            <p>Developed a tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</p>
-            <p><strong>Technologies:</strong> Python, Hugging Face Transformers, TextBlob, OpenAI API, Matplotlib, Seaborn, ReportLab</p>
+            <h3 style="color: #000;"><a href="https://github.com/bencoleman24/AmazonReviewInsights" style="color: #007bff;">Amazon Product Sentiment Report Generator</a></h3>
+            <p style="color: #555;">Developed a tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</p>
+            <p style="color: #000;"><strong>Technologies:</strong> Python, Hugging Face Transformers, TextBlob, OpenAI API, Matplotlib, Seaborn, ReportLab</p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Benjamin Coleman</p>
+        <p style="color: #000;">&copy; 2024 Benjamin Coleman</p>
     </footer>
 </body>
 
