--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
@@ -9,24 +8,18 @@
     <title>About - Benjamin Coleman</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .active {
-            color: #007bff;
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body>
     <header class="detailed-header">
         <div class="header-content">
-            <h1 style="color: #000;">Benjamin Coleman</h1>
-            <p style="color: #555;">Data Scientist & Aspiring Machine Learning Engineer</p>
-            <p class="location" style="color: #007bff;">Chicago | Boston</p>
+            <h1>Benjamin Coleman</h1>
+            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p class="location">Chicago | Boston</p>
             <div class="contact-links">
-                <a href="mailto:benbcoleman08@gmail.com" style="color: #000;"><i class="fas fa-envelope"></i> Email</a>
-                <a href="https://www.linkedin.com/in/benjamin-coleman02" style="color: #000;"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/bencoleman24" style="color: #000;"><i class="fab fa-github"></i> GitHub</a>
+                <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://github.com/bencoleman24"><i class="fab fa-github"></i> GitHub</a>
             </div>
         </div>
         <nav>
@@ -39,30 +32,30 @@
     </header>
 
     <section id="about">
-        <h2 style="color: #000;">About Me</h2>
-        <p style="color: #000;">I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
+        <h2>About Me</h2>
+        <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
         
-        <h2 style="color: #000;">Experience</h2>
+        <h2>Experience</h2>
         <div class="experience">
-            <h3 style="color: #000;">Graduate Research Assistant - Boston University</h3>
-            <p style="color: #555;"><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
+            <h3>Graduate Research Assistant - Boston University</h3>
+            <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
         </div>
         <div class="experience">
-            <h3 style="color: #000;">Data Science Intern - SuperWorld</h3>
-            <p style="color: #555;"><strong>June 2024 - September 2024</strong><br>Worked on various data analysis projects to identify key trends and potential strategies in improving platform engagement and growth. Enhanced data workflow by improving data cleanliness and optimizing transformation processes to support scalable models and analytics.</p>
+            <h3>Data Science Intern - SuperWorld</h3>
+            <p><strong>June 2024 - September 2024</strong><br>Worked on various data analysis projects to identify key trends and potential strategies in improving platform engagement and growth. Enhanced data workflow by improving data cleanliness and optimizing transformation processes to support scalable models and analytics.</p>
         </div>
         <div class="experience">
-            <h3 style="color: #000;">Data Engineering Intern - CNH Industrial</h3>
-            <p style="color: #555;"><strong>May 2023 - August 2023</strong><br>Designed and implemented a data quality monitoring system using scheduled Databricks notebooks, enhancing data quality and accuracy. Employed statistical techniques to examine extensive vehicle data, successfully identifying and diagnosing problems, contributing to improved insights. Leveraged PowerBI for visualization and presented findings effectively.</p>
+            <h3>Data Engineering Intern - CNH Industrial</h3>
+            <p><strong>May 2023 - August 2023</strong><br>Designed and implemented a data quality monitoring system using scheduled Databricks notebooks, enhancing data quality and accuracy. Employed statistical techniques to examine extensive vehicle data, successfully identifying and diagnosing problems, contributing to improved insights. Leveraged PowerBI for visualization and presented findings effectively.</p>
         </div>
         <div class="experience">
-            <h3 style="color: #000;">Student Assistant - University of Wisconsin-Madison, Dean of Students Office</h3>
-            <p style="color: #555;"><strong>January 2022 - May 2024</strong><br>Served as the first line of communication for the office, helping students, parents, and staff of the university. Assisted professional staff with projects and scheduling, and provided resources to students and parents in times of crisis.</p>
+            <h3>Student Assistant - University of Wisconsin-Madison, Dean of Students Office</h3>
+            <p><strong>January 2022 - May 2024</strong><br>Served as the first line of communication for the office, helping students, parents, and staff of the university. Assisted professional staff with projects and scheduling, and provided resources to students and parents in times of crisis.</p>
         </div>
     </section>
 
     <footer>
-        <p style="color: #000;">&copy; 2024 Benjamin Coleman</p>
+        <p>&copy; 2024 Benjamin Coleman</p>
     </footer>
 </body>
 
