--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
             <p>Data Scientist & Aspiring Machine Learning Engineer</p>
-            <p class="location">Chicago | Boston</p>
+            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -26,7 +26,6 @@
             <ul>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +33,12 @@
     <section id="about">
         <h2>About Me</h2>
         <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
+        
+        <h2>Education</h2>
+        <div class="education">
+            <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025)</p>
+            <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
+        </div>
         
         <h2>Experience</h2>
         <div class="experience">
